Keep packages, required for the next build

--- a/HISTORY
+++ b/HISTORY
@@ -14,3 +14,15 @@ vdrpbd Revision History
 - Better parser for PKGBUILD headers
 - Support for checkdepends
 - Many bugfixes
+
+2014-xx-xx: Version x.x.x
+
+- Now skipping packages, that can't be built on the current architecture
+- Variable "$CARCH" is now allowed in the TARGET parameter of repo-make.conf
+- Parser for PKGBUILD improved, so it should now (hopefully) support all
+  common cases
+- Added CHECKSCRIPT parameter to define a quality assurance script for your
+  repository
+- Debug packages are now supported and properly handled by repo-make
+- Improved verify mode so it no longer uninstalls packages, needed for the
+  next package in the build order
